# basicapp

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  elephant_notes.md  nginx.conf  nginx.dev.conf
ai/: Dockerfile.dev  aimodel.py  pyproject.toml
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/basicapp/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: urls.py  views.py
backend/templates/: base.html
backend/templates/core/: home.html
frontend/: Dockerfile.dev.react  Dockerfile.prod.react  Dockerfile.react  package-lock.json  package.json
frontend/my-app/: craco.config.js  package-lock.json  package.json  webpack.config.js
frontend/my-app/public/: index.html
frontend/my-app/src/: App.css  App.js
