[tool.poetry]
name = "ai"
version = "0.1.0"
description = "A basic ai model"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
transformers = "^4.48.3"
accelerate = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Define package directories correctly
# [[tool.poetry.packages]]
# include = "basicapp"