[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A basic Django application"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2"
djangorestframework = "^3.12"
gunicorn = "^20.0.4"  # Add this line

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Define package directories correctly
[[tool.poetry.packages]]
include = "basicapp"