[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A basic Django application"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"
gunicorn = "^20.0.4"  # Add this line
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
transformers = "^4.48.3"
requests = "^2.32.3"
django-cors-headers = "^4.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Define package directories correctly
[[tool.poetry.packages]]
include = "basicapp"